--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -4,6 +4,7 @@ channels:
   # sources selects the channels to pull packages from, in order.
   sources:
     - conda-forge
+    - mafarrag
     - defaults
   # targets is a list of 2-lists, where the first element is the
   # channel to push to and the second element is the label on that channel
@@ -23,8 +24,8 @@ azure:
 
 provider:
   linux: travis
-  osx: travis
-  win: travis
+#  osx: travis
+#  win: travis
   
 skip_render:
   - README.md
