--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,36 +7,20 @@ package:
   version: {{ version }}
 
 source:
-  #git_url: {{ environ.get('FEEDSTOCK_ROOT', '..') }}
-  #   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  # url: https://github.com/MAfarrag/Hapi/archive/v{{version}}.tar.gz
-  path: F:\01Algorithms\Hydrology\HAPI
-  sha256: 05499e69186ff7d286fb9b4f4183517f59922bef51059289ddd25db8c752b060  
+  url: https://github.com/MAfarrag/Hapi/archive/refs/tags/{{version}}.tar.gz
+  sha256: 869ce8242e314fd3b5496d07369ac82a154a226da381300f355350149bd0cfa0
+  
 
 build:
-  # Uncomment the following line if the package is pure Python and the recipe
-  # is exactly the same for all platforms. It is okay if the dependencies are
-  # not built for all platforms/versions, although selectors are still not allowed.
-  # See https://conda-forge.org/docs/maintainer/knowledge_base.html#noarch-python
-  # for more details.
   noarch: python
 
   number: {{ build_number }}
   string: {{ [build_number, ('h' + PKG_HASH), environ.get('GIT_DESCRIBE_HASH', '')]|join('_') }}
 
-  # If the installation is complex, or different between Unix and Windows,
-  # use separate bld.bat and build.sh files instead of this key. By default,
-  # the package will be built for the Python versions supported by conda-forge
-  # and for all major OSs. Add the line "skip: True  # [py<35]" (for example)
-  # to limit to Python 3.5 and newer, or "skip: True  # [not win]" to limit
-  # to Windows.
   script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
-  build:
-    # If your project compiles code (such as a C extension) then add the required
-    # compilers as separate entries here. Compilers are named 'c', 'cxx' and 'fortran'.
-    #- {{ compiler('c') }}
+
   host:
     - python
     - pip  
@@ -85,22 +69,15 @@ requirements:
     - ecmwf-api-client
 
 test:
-  # Some packages might need a `test/commands` key to check CLI.
-  # List all the packages/modules that `run_test.py` imports.
   imports:
     - Hapi
-  # Run your test commands here
   commands:
     - Hapi --help
     - pytest
-  # declare any test-only requirements here
   requires:
     - pytest
-  # copy over any needed test files here
   source_files:
     - tests/
-
-# Uncomment and fill in Hapi metadata
 about:
   home: https://github.com/MAfarrag/HAPI
   license: MIT
@@ -110,10 +87,3 @@ about:
   dev_url: https://github.com/MAfarrag/HAPI
   doc_url: https://github.com/MAfarrag/HAPI
   doc_source_url: https://github.com/MAfarrag/HAPI/master/README.md
-
-# Uncomment the following if this will be on a forge
-# Remove these lines if this is only be used for CI
-#extra:
-#  recipe-maintainers:
-#    - BobaFett
-#    - LisaSimpson
