--- a/conda-forge/meta.yaml
+++ b/conda-forge/meta.yaml
@@ -8,7 +8,10 @@ package:
 
 source:
   #git_url: {{ environ.get('FEEDSTOCK_ROOT', '..') }}
-  path: F:\01Algorithms\Hydrology\HAPI
+  #   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://github.com/MAfarrag/Hapi/archive/refs/tags/{{version}}.tar.gz
+  sha256: 869ce8242e314fd3b5496d07369ac82a154a226da381300f355350149bd0cfa0
+  
 
 build:
   # Uncomment the following line if the package is pure Python and the recipe
@@ -92,7 +95,7 @@ test:
     - pytest
   # declare any test-only requirements here
   requires:
-     - pytest
+    - pytest
   # copy over any needed test files here
   source_files:
     - tests/
