--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "1.0.2" %}
+{% set version = "1.0.3" %}
 
 package:
   name: hapi
@@ -13,7 +13,7 @@ build:
   script: python -m pip install --no-deps --ignore-installed .
 
 channels:
-  - mafarrag
+#  - mafarrag
   - conda-forge  
 
 requirements:
