--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,8 @@ theme:
 
 nav:
     - Home: index.md
+    - Available Models:
+        - HBV Bergström, 1992: HBV.md
     - Tutorial:
         - Inputs: Inputs.md
         - Lumped Hydrological Model: Lumped_HBV.md
