--- a/appveyor.yml
+++ b/appveyor.yml
@@ -75,13 +75,12 @@ install:
   
   # Install various dependencies
   - cmd: conda config --add channels conda-forge
-  - cmd: conda config --add channels mafarrag
   - cmd: while read requirement; do conda install --yes $requirement; done < requirements.txt
-  - cmd: pip install ecmwf-api-client
+#  - cmd: pip install ecmwf-api-client
   - cmd: python -V
   - cmd: python setup.py build_ext --inplace
   - cmd: python setup.py install
-  - cmd: conda install numpy --yes
+#  - cmd: conda install numpy --yes
   #- cmd: cd ..
 
 build: off
