--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,7 +74,7 @@ install:
   # Install various dependencies
   - cmd: conda config --add channels conda-forge
 #  - cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
-  - cmd: conda env update -p Hapi-env --file environment.yml  --prune
+  - cmd: conda env update -name Hapi-env --file environment.yml  --prune
 #  - cmd: pip install ecmwf-api-client
   - cmd: python -V
   - cmd: python setup.py build_ext --inplace
