--- a/appveyor.yml
+++ b/appveyor.yml
@@ -75,6 +75,7 @@ install:
   - cmd: conda config --add channels conda-forge
 #  - cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
   - cmd: conda env update -name Hapi-env --file environment.yml  --prune
+  - cmd: activate Hapi-env
 #  - cmd: pip install ecmwf-api-client
   - cmd: python -V
   - cmd: python setup.py build_ext --inplace
