--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,8 +74,9 @@ install:
   # Install various dependencies
   - cmd: conda config --add channels conda-forge
 #  - cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
-  - cmd: conda env update -name Hapi-env --file environment.yml  --prune
-  - cmd: activate Hapi-env
+  - conda install --yes --file requirement.txt
+#  - cmd: conda env update -name Hapi-env --file environment.yml  --prune
+#  - cmd: activate Hapi-env
 #  - cmd: pip install ecmwf-api-client
   - cmd: python -V
   - cmd: python setup.py build_ext --inplace
