--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,7 +73,8 @@ install:
   
   # Install various dependencies
   - cmd: conda config --add channels conda-forge
-  - cmd: while read requirement; do conda install --yes $requirement; done ^< requirement.txt
+  #- cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
+  - cmd: FOR /F "delims=~" %f in (requirement.txt) DO conda install --yes "%f" || pip install "%f"
   - cmd: conda install --yes --file requirement.txt
 #  - cmd: conda env update -name Hapi-env --file environment.yml  --prune
 #  - cmd: activate Hapi-env
