--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ install:
   - conda clean --packages -y
   # Install various dependencies  
   #- conda install --yes $DEPS pip
-  - conda install --yes --file requirement.txt
-  #- while read requirement; do conda install --yes $requirement; done < requirement.txt
+  #- conda install --yes --file requirement.txt
+  - while read requirement; do conda install --yes $requirement; done < requirement.txt
   # ecmwf-api-client and joblib have problem when installed from the requirement file
   #- pip install ecmwf-api-client
   #- pip install joblib
