--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,8 +74,9 @@ install:
   # Install various dependencies
   - cmd: conda config --add channels conda-forge
   #- cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
-  - cmd: FOR /F "delims=~" %f in (requirement.txt) DO (conda install f --yes )
+#  - cmd: FOR /F "delims=~" %f in (requirement.txt) DO (conda install f --yes )
 #  - cmd: conda install --yes --file requirement.txt
+  - cmd: pip install -r requirement.txt
 #  - cmd: conda env update -name Hapi-env --file environment.yml  --prune
 #  - cmd: activate Hapi-env
 #  - cmd: pip install ecmwf-api-client
@@ -83,8 +84,8 @@ install:
   - cmd: python setup.py build_ext --inplace
   - cmd: python setup.py install
 #  - cmd: sbt clean coverage test
-  - cmd: conda install numpy --yes
-  - cmd: conda install gdal --yes  
+#  - cmd: conda install numpy --yes
+#  - cmd: conda install gdal --yes  
   #- cmd: cd ..
 
 build: off
