--- a/appveyor.yml
+++ b/appveyor.yml
@@ -75,9 +75,9 @@ install:
   - cmd: conda config --add channels conda-forge
   #- cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
 #  - cmd: FOR /F "delims=~" %f in (requirement.txt) DO (conda install f --yes )
-#  - cmd: conda install --yes --file requirement.txt
-  - cmd: pip install matplotlib
-  - cmd: pip install -r requirement.txt
+  - cmd: conda install --yes --file requirement.txt
+#  - cmd: pip install matplotlib
+#  - cmd: pip install -r requirement.txt
 #  - cmd: conda env update -name Hapi-env --file environment.yml  --prune
 #  - cmd: activate Hapi-env
 #  - cmd: pip install ecmwf-api-client
