--- a/appveyor.yml
+++ b/appveyor.yml
@@ -76,6 +76,7 @@ install:
   #- cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
 #  - cmd: FOR /F "delims=~" %f in (requirement.txt) DO (conda install f --yes )
   - cmd: conda install --yes --file requirement.txt
+  - cmd: conda update -n base -c defaults conda
 #  - cmd: pip install matplotlib
 #  - cmd: pip install -r requirement.txt
 #  - cmd: conda env update -name Hapi-env --file environment.yml  --prune
@@ -97,11 +98,8 @@ configuration:
   - Release
 
 test_script:
-#- tox
 - cmd: cd Examples/
 - cmd: python test.py
 - cmd: cd ./GIS
 - cmd: python 01Reproject_points.py
-
-- cmd: python test.py
 #- cmd: sbt coveralls
