--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,11 +74,11 @@ install:
   # Install various dependencies
   - cmd: conda config --add channels conda-forge
   #- cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
-  - cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
+  #- cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
 
 #  - cmd: FOR /F "delims=~" %f in (requirement.txt) DO (conda install f --yes )
-#  - cmd: conda install --yes --file requirement.txt
-  - cmd: conda update -n base -c defaults conda
+  - cmd: conda install --yes --file requirement.txt
+#  - cmd: conda update -n base -c defaults conda
 #  - cmd: pip install matplotlib
 #  - cmd: pip install -r requirement.txt
 #  - cmd: conda env update -name Hapi-env --file environment.yml  --prune
