--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,10 @@ envlist = py35-cov41-{default,pyyaml},py{36,37,38,39,py3}-cov{41,5}-{default,pyy
 
 [gh-actions]
 python =
-    3.5: py35
     3.6: py36-cov5
     3.7: py37-cov5
     3.8: py38-cov5
+    3.9: py39-cov5
 
 [testenv]
 passenv = *
@@ -19,7 +19,7 @@ deps =
     cov41: coverage>=4.1,<5.0
     cov5: coverage>=5.0,<6.0
 commands =
-    coverage run --branch --source=coveralls -m pytest tests/
+    coverage run --branch --source=coveralls -m pytest Examples/
     coverage report -m
 
 [testenv:coveralls41]
