--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ install:
   - python setup.py build_ext --inplace
   - python setup.py install
   - conda update --all --yes
-  - pip install tox
+#  - pip install tox
  # - cd ..
 # command to run tests
 script:
@@ -57,9 +57,7 @@ script:
   - python test.py
   - cd ./GIS
   - python 01Reproject_points.py
-  - tox -e $(echo py$TRAVIS_PYTHON_VERSION | tr -d . | sed -e 's/pypypy/pypy/')-cov41-pyyaml
+#  - tox -e $(echo py$TRAVIS_PYTHON_VERSION | tr -d . | sed -e 's/pypypy/pypy/')-cov41-pyyaml
 
-
-
-#after_success: 
-#  - "sbt coveralls"
+after_success: 
+  - coveralls
