--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,8 @@ install:
   - python setup.py build_ext --inplace
   - python setup.py install
   - conda update --all --yes
+  - pip install --upgrade pytest pytest-cov
+
 #  - pip install tox
  # - cd ..
 # command to run tests
