--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,28 +60,27 @@ install:
   # for python 3.4 as it does not exist in conda channels
   # conda config --set restore_free_channel True
   # No need to install miniconda because appveyor comes with it.
-#  - cmd: SET PATH=%CONDA_INSTALL_LOCN%;%CONDA_INSTALL_LOCN%\Scripts;%PATH%
-#  - cmd: SET PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%
+  - cmd: SET PATH=%CONDA_INSTALL_LOCN%;%CONDA_INSTALL_LOCN%\Scripts;%PATH%
+  - cmd: SET PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%
 #  - cmd: conda config --set always_yes yes --set changeps1 no
 #  - cmd: conda update -q conda
 #  - cmd: conda info -a
   # Create a new environment
-#  - cmd: conda create -q -n Hapi-env python=%PYTHON_VERSION% --yes
-#  - cmd: activate Hapi-env
-#  - cmd: conda clean --tarballs -y
-#  - cmd: conda clean --packages -y
+  - cmd: conda create -q -n Hapi-env python=%PYTHON_VERSION% --yes
+  - cmd: activate Hapi-env
+  - cmd: conda clean --tarballs -y
+  - cmd: conda clean --packages -y
   
   # Install various dependencies
-#  - cmd: conda config --add channels conda-forge
+  - cmd: conda config --add channels conda-forge
   #- cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
   #- cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
 
 #  - cmd: FOR /F "delims=~" %f in (requirement.txt) DO (conda install f --yes )
-#  - cmd: conda install --yes --file requirement.txt
-#  - cmd: pip install matplotlib
-  - cmd: pip install --upgrade --user pip
-  - cmd: pip install -r requirement.txt
-#  - cmd: conda update -n base -c defaults conda
+  - cmd: conda install --yes --file requirement.txt
+#  - cmd: pip install --upgrade --user pip
+#  - cmd: pip install -r requirement.txt
+  - cmd: conda update -n base -c defaults conda
 #  - cmd: conda env update -name Hapi-env --file environment.yml  --prune
 #  - cmd: activate Hapi-env
 #  - cmd: pip install ecmwf-api-client
@@ -106,7 +105,7 @@ test_script:
 - cmd: cd Examples/
 - cmd: conda list
 - cmd: python test.py
-#- cmd: C:/Miniconda-x64/envs/Hapi-env/python test.py
-- cmd: cd ./GIS
-- cmd: python 01Reproject_points.py
+- cmd: C:\Miniconda-x64\envs\Hapi-env\python test.py
+#- cmd: cd ./GIS
+#- cmd: python 01Reproject_points.py
 - cmd: coveralls
