--- a/appveyor.yml
+++ b/appveyor.yml
@@ -80,7 +80,7 @@ install:
   - cmd: conda install --yes --file requirement.txt
 #  - cmd: pip install --upgrade --user pip
 #  - cmd: pip install -r requirement.txt
-  - cmd: conda update -n base -c defaults conda
+  - cmd: conda update --yes -n base -c defaults conda
 #  - cmd: conda env update -name Hapi-env --file environment.yml  --prune
 #  - cmd: activate Hapi-env
 #  - cmd: pip install ecmwf-api-client
