--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,12 +5,14 @@
 # Required
 version: 2
 
+conda:
+  environment: environment.yml
 # Build documentation in the docs/ directory with Sphinx
-#sphinx:
-#  configuration: docs/source/conf.py
+sphinx:
+  configuration: docs/conf.py
 #Build documentation with MkDocs
-mkdocs:
-  configuration: mkdocs.yml
+#mkdocs:
+#  configuration: mkdocs.yml
   
 
 # Optionally build your docs in additional formats such as PDF and ePub
