--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,10 +6,10 @@
 version: 2
 
 conda:
-  environment: docs/environment.yml
+  environment: doc/environment.yml
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-  configuration: docs/conf.py
+  configuration: doc/conf.py
 #Build documentation with MkDocs
 #mkdocs:
 #  configuration: mkdocs.yml
