--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -4,14 +4,15 @@ channels:
   - conda-forge
 dependencies:
   - python  
-  - pip
+#  - pip
+#  - matplotlib
+#  - gdal  
+#  - proj  
 #  - affine
 #  - fiona
-#  - proj
-#  - gdal
+
 #  - pandas
 #  - geopandas
-#  - matplotlib
 #  - scipy
 #  - shapely
 #  - statsmodels
