--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -4,8 +4,8 @@ channels:
   - conda-forge
 dependencies:
   - python  
-#  - pip
-#  - matplotlib
+  - pip
+  - matplotlib
 #  - gdal  
 #  - proj  
 #  - affine
