documentation and tests

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ Examples/data/hydrodynamic model/H-2010-01-01.csv
 Examples/data/Hapi.qgz
 Examples/data/GIS/Hapi_GIS_Data/rasterexample.tif
 Examples/data/GIS/Hapi_GIS_Data/fillrasterexample.tif
+Examples/data/GIS/Hapi_GIS_Data/rasterlike.tif
