--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ docs/HapiDocs.sublime-project
 docs/HapiDocs.sublime-workspace
 Hapi/hm/saintvenant.py
 Hapi/hm.py
+Hapi/00000statistics/
 
 HAPI_Nile.egg-info/PKG-INFO
 docs/.vscode/
