--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pyproj = "^3.2.1"
 proj = "^0.2.0"
 Shapely = "^1.8.0"
 gdal = ">=3.1.4,<3.3.3"
+loguru = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
 
