--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,55 @@ gdal = "^3.3.3"
 loguru = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+pytest-cov = "^2.12.1"
+
+coverage = {extras = ["toml"], version = "^5.4"}
+safety = "^1.10.3"
+mypy = "^0.910"
+typeguard = "^2.12.1"
+
+xdoctest = {extras = ["colors"], version = "^0.15.5"}
+pre-commit = "^2.13.0"
+flake8 = "^3.9.2"
+loguru = "^0.5.3"
+black = "^20.8b1"
+flake8-bandit = "^2.1.2"
+flake8-bugbear = "^21.4.3"
+flake8-docstrings = "^1.6.0"
+flake8-rst-docstrings = "^0.2.3"
+pep8-naming = "^0.12.0"
+darglint = "^1.8.0"
+reorder-python-imports = "^2.6.0"
+pre-commit-hooks = "^4.0.1"
+
+[tool.coverage.paths]
+source = ["Hapi", "*/site-packages"]
+
+[tool.coverage.run]
+branch = true
+source = ["gee_utils"]
+
+[tool.coverage.report]
+show_missing = true
+# fail_under = 50
+
+[tool.isort]
+multi_line_output=3
+include_trailing_comma=true
+force_grid_wrap=0
+use_parentheses=true
+line_length=88
+ensure_newline_before_comments=true
+profile="black"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+# "--disable-pytest-warnings"
+testpaths = [
+    "tests",
+]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
