--- a/environment.yml
+++ b/environment.yml
@@ -1,31 +1,33 @@
 channels:
   - conda-forge
 dependencies:
-  - pip
-  - numpy
-  - affine
-  - fiona
-  - proj
-  - gdal
-  - pandas
-  - geopandas
-  - matplotlib
-  - python
-  - scipy
-  - shapely
-  - statsmodels
-  - rasterio
-  - rasterstats
-  - oasis
-  - netCDF4
-  - scikit-learn
-  - scikit-image
-  - ecmwf-api-client
-  - joblib
+  - pip >= 21.3.1
+  - numpy >=1.21.2,<1.21.4
+  - affine >= 2.3.0
+  - fiona >= 1.8.20
+  - proj >= 0.2.0
+  - pyproj >=3.2.1,<=3.3.0
+  - gdal >=3.3.3,<3.3.4
+  - pandas >=1.3.2,<1.3.4
+  - geopandas >= 0.10.2
+  - matplotlib >=3.4.2,<3.5.0
+  - python >=3.7.1,<3.10
+  - scipy >=1.7.0,<1.7.3
+  - shapely >=1.8.0
+  - statsmodels >=0.12.2,<0.13.0
+  - rasterio >= 1.2.10
+  - rasterstats >= 0.16.0
+  - oasis >= 0.1.3
+  - netCDF4 >=1.5.5,<1.5.8
+  - scikit-learn >=0.24.2,<1.0.1
+  - scikit-image >=0.18.3
+  - ecmwf-api-client >=1.6.1
+  - joblib >= 1.1.0
+  - geopy >=2.2.0
   #- hapi
   - pip:
-    - numpy
-    - pyproj
-    - hapi-nile
-    - ffmpeg-python
+#    - numpy
+#    - pyproj
+#    - hapi-nile
+#    - ffmpeg-python
     #- git+https://github.com/MAfarrag/HAPI.git
