--- a/conda-forge/Hapi/meta.yaml
+++ b/conda-forge/Hapi/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "Hapi" %}
-{% set version = "1.0.3" %}
+{% set version = "1.0.5" %}
 
 package:
   name: {{ name|lower }}
@@ -18,52 +18,31 @@ requirements:
 
   host:
     - python >=2.7
-    - pip  
-    - numpy
-    - affine
-    - fiona
-    - proj
-    - pyproj
-    - gdal
-    - pandas
-    - geopandas
-    - matplotlib
-    - python
-    - scipy
-    - shapely
-    - statsmodels
-    - rasterio
-    - rasterstats
-    - netCDF4
-    - scikit-learn
-    - scikit-image
-    - ecmwf-api-client
-    - oasis
-    - joblib
-  run:
-    - python >=2.7
     - pip
-    - numpy
-    - affine
-    - fiona
-    - proj
-    - pyproj
-    - gdal
-    - pandas
-    - geopandas
-    - matplotlib
-    - python
-    - scipy
-    - shapely
-    - statsmodels
-    - rasterio
-    - rasterstats
-    - netCDF4
-    - scikit-learn
-    - scikit-image
-    - ecmwf-api-client
-    - oasis
-    - joblib
+  run:
+    - pip >= 21.3.1
+    - numpy >=1.21.2,<1.21.4
+    - affine >= 2.3.0
+    - fiona >= 1.8.20
+    - proj >= 0.2.0
+    - pyproj >=3.2.1,<=3.3.0
+    - gdal >=3.3.3,<3.3.4
+    - pandas >=1.3.2,<1.3.4
+    - geopandas >= 0.10.2
+    - matplotlib >=3.4.2,<3.5.0
+    - python >=3.7.1,<3.10
+    - scipy >=1.7.0,<1.7.3
+    - shapely >=1.8.0
+    - statsmodels >=0.12.2,<0.13.0
+    - rasterio >= 1.2.10
+    - rasterstats >= 0.16.0
+    - oasis >= 0.1.3
+    - netCDF4 >=1.5.5,<1.5.8
+    - scikit-learn >=0.24.2,<1.0.1
+    - scikit-image >=0.18.3
+    - ecmwf-api-client >=1.6.1
+    - joblib >= 1.1.0
+    - geopy >=2.2.0
 
 test:
   imports:
