--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,19 +1,4 @@
-steps:
-- uses: actions/checkout@master
-- uses: codecov/codecov-action@v1.4.0
-  with:
-    #token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-    files: ./coverage1.xml,./coverage2.xml # optional
-    flags: unittests # optional
-    name: codecov-umbrella # optional
-    fail_ci_if_error: true # optional (default = false)
-    verbose: true # optional (default = false)
-
-
-
-
-
-- name: Codecov
+name: CI
 on: [push]
 jobs:
   run:
@@ -23,13 +8,13 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     env:
       OS: ${{ matrix.os }}
-      PYTHON: '3.7'
+      PYTHON: '3.9'
     steps:
     - uses: actions/checkout@master
     - name: Setup Python
       uses: actions/setup-python@master
       with:
-        python-version: 3.7
+        python-version: 3.9
     - name: Generate coverage report
       run: |
         pip install pytest
