--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -3,30 +3,32 @@ name: hapi
 channels:
   - conda-forge
 dependencies:
-  - python
-  - pip
-  - matplotlib
-  - gdal
-  - proj
-  - affine
-  - fiona
-  - pandas
-  - geopandas
-  - scipy
-  - shapely
-  - statsmodels
-  - rasterio
-  - rasterstats
-  - oasis
-  - netCDF4
-  - scikit-learn
-  - scikit-image
-  - ecmwf-api-client
-  - joblib
-  - hapi
+  - pip >=21.3.1
+  - numpy >=1.21.2,<1.21.5
+  - gdal >=3.3.3,<3.4.1
+  - affine >=2.3.0
+  - fiona >=1.8.20
+  - proj >=0.2.0
+  - pyproj >=3.2.1,<=3.3.0
+  - pandas >=1.3.2,<1.3.5
+  - geopandas >=0.10.2
+  - matplotlib >=3.4.2,<3.6.0
+  - python >=3.7.1,<3.10
+  - scipy >=1.7.0,<1.7.4
+  - shapely >=1.8.0
+  - statsmodels >=0.12.2,<0.14.0
+  - rasterio >=1.2.10
+  - rasterstats >=0.16.0
+  - oasis >=0.1.3
+  - netCDF4 >=1.5.5,<1.5.9
+  - scikit-learn >=0.24.2,<1.0.2
+  - scikit-image >=0.18.3
+  - ecmwf-api-client >=1.6.1
+  - joblib >=1.1.0
+  - geopy >=2.2.0
   - pip:
-    - numpy
-    - pyproj
-    - ffmpeg-python
-#    - hapi-nile
-    - git+https://github.com/MAfarrag/HAPI.git
+    #- numpy
+    #- pyproj
+    #- ffmpeg-python
+#   # - hapi-nile
+    #- git+https://github.com/MAfarrag/HAPI.git
