--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,7 +8,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     env:
       OS: ${{ matrix.os }}
-      PYTHON: ["3.7", "3.8", "3.9", "3.10"]
+      PYTHON: 3.9
     steps:
     - uses: actions/checkout@master
     - name: Setup Python
