--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,15 +6,17 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.6", "3.7", "3.8", "3.9"]
     env:
       OS: ${{ matrix.os }}
-      PYTHON: 3.9
+#      PYTHON: 3.9
+
     steps:
     - uses: actions/checkout@master
-    - name: Setup Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@master
       with:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
       run: |
