--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install --no-cache-dir Cython
         pip install flake8 pytest
         if [ -f requirement.txt ]; then pip install -r requirement.txt; fi
 #    - name: Lint with flake8
