--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,6 +20,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt-get install libgdal-dev
         python -m pip install --upgrade pip
         pip install --no-cache-dir Cython
         pip install flake8 pytest
