--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,8 +20,13 @@ jobs:
 
     - name: Install dependencies
       run: |
-        brew install gdal
         python -m pip install --upgrade pip
+        sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
+        sudo apt-get update
+        sudo apt-get install libproj-dev proj-data proj-bin
+        sudo apt-get install libgeos-dev
+        sudo apt-get install gdal-bin libgdal-dev libgdal-doc
+        pip install wheel
         pip install --no-cache-dir Cython
         pip install flake8 pytest
         if [ -f requirement-ci.txt ]; then pip install -r requirement-ci.txt; fi
