--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,6 +30,8 @@ jobs:
         pip install --no-cache-dir Cython
         pip install flake8 pytest
         if [ -f requirement-ci.txt ]; then pip install -r requirement-ci.txt; fi
+        export LD_PRELOAD=/usr/lib/aarch64-linux-gnu/libgomp.so.1:/$LD_PRELOAD
+
 #    - name: Lint with flake8
 #      run: |
 #        # stop the build if there are Python syntax errors or undefined names
